--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ futures = "0.3.31"
 axum = "0.8.4"
 colored = "3.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
